<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Tan</string>
    <string name="last_name">Vo</string>
    <string name="full_name" formatted="false">%s %s</string>

    <string name="profile_bio_text">
        👋 So about me. I\'m a recent CS graduate at University of Texas at Dallas and am currently
        pursuing MS CS at the same university. I\'m 21 years old and live in the Garland, TX area.
    </string>

    <string name="profile_hobby_header_text">Favorite Hobbies:</string>
    <string name="profile_hobby_first_text">🥇 Drawing ✏️</string>
    <string name="profile_hobby_second_text">🥈 Gym 🏋️</string>
    <string name="profile_hobby_third_text">🥉 Video games 🎮</string>
</resources>